--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.8.1"
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "history": "^4.7.2",
@@ -31,7 +32,7 @@
     "redux-promise": "^0.5.3"
   },
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --mode development --open --hot",
     "deploy": "echo \"You are using react-router. You can't deploy on GitHub Pages\""
   }
 }
